force-app/main/default/objects/CCAvenue__mdt/CCAvenue__mdt.object-meta.xml
<CustomObject>
    <label>CCAvenue</label>
    <pluralLabel>CCAvenues</pluralLabel>
</CustomObject>