force-app/main/default/objects/CCAvenue__mdt/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <label>Command</label>
    <length>40</length>
    <type>Text</type>
</CustomField>