force-app/main/default/objects/CCAvenue__mdt/fields/Decryption_key__c.field-meta.xml
<CustomField>
    <fullName>Decryption_key__c</fullName>
    <label>Decryption key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>