force-app/main/default/objects/CCAvenue__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <length>60</length>
    <type>Text</type>
</CustomField>