force-app/main/default/objects/CCAvenue__mdt/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <label>Response Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>